syntax = "proto3";

option go_package = "github.com/Divik-kid/Distri-Assignment03/chatserver";

package chatserver;

message FromClient {

    string name = 1;
    string body = 2;
    string logTime = 3;
}

message FromServer {

    string name = 1;
    string body = 2;
    string logTime = 3;
}

service Services {

    rpc ChatService(stream FromClient) returns (stream FromServer){};
}